# Open_ThermoKinetics

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  COMPREHENSIVE_ARCHITECTURE_ANALYSIS_RU.md  LAST_TRY_REPORT.md  OTK.spec  PHASE3_COMPLETION_REPORT.md  PHASE3_FINAL_REPORT.md  PHASE4_DATA_COMPLETION_REPORT.md  PHASE4_PLAN.md  PHASE4_SUCCESS_SUMMARY.md  README.md  UI_ARCHITECTURE.md  UI_REFACTOR_PLAN.md  USER_GUIDE_REFACTOR_PROGRESS.md  basinhopping_implementation_plan.md  code_instructions.md  development_plan.md  model_based_best_values_plan.md  pyproject.toml  simple_test_phase1.py  test_framework_phase1.py  test_framework_phase2.py  test_framework_phase3.py  test_log_aggregation.py  user_guide_refactor_plan.md
.ai/: ARCHITECTURE.md  CHANGELOG.md  DATA_MODELS.md  PARALLEL_OPTIMIZATION_FEASIBILITY.md  UI_ARCHITECTURE.md
.ai/design/: CONCEPT.md  components.html  layout_dark.html  layout_light.html
.ai/specs/: feature-move-calculations-to-series.md  feature-plot-canvas-design-system.md  feature-python-3.13-uv-migration.md  spec.md
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/instructions/: architecture.instructions.md  ui_architecture.instructions.md
.github/workflows/: pre-commit.yml  release.yml
docs/develop_plan/: export_data_button.md  ts.md  ui.md
docs/ru/: 0_ssk.ipynb  0_ssk_basics.ipynb  1_model_fit.ipynb  2_model_free.ipynb  3_model_based.ipynb  4_pygmo_optimization.ipynb  model_fit.ipynb  model_free.ipynb  models_gifs.ipynb  pygmo_udp.py
resources/: DSC_NH4Cl_refined_10.0K_min.csv  DSC_NH4Cl_refined_3.0K_min.csv  DSC_NH4Cl_refined_5.0K_min.csv  NH4_rate_10_3_rcts_ads_ads_ads.json  NH4_rate_10_4_rcts_ads_ads_ads_ads.json  NH4_rate_3_3_rcts_ads_ads_ads.json  NH4_rate_3_3_rcts_fr_ads_ads.json  NH4_rate_3_4_rcts_ads_ads_ads_ads.json  NH4_rate_3_4_rcts_gs_fr_ads_ads.json  NH4_rate_5_3_rcts_ads_ads_ads.json  NH4_rate_5_4_rcts_ads_ads_ads_ads.json  NH4_rate_5_4_rcts_ads_fr_ads_ads.json  Данные ДСК.csv  Данные ТГА.csv
src/core/: app_settings.py  base_signals.py  calculation.py  (+16 more)
tests/: conftest.py  test_logger.py
(+247 files in other folders)
