# pyproject.toml
# url: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[project]
name = "solid-state-kinetics"
version = "0.1.0"
description = "calculating kinetic models of chemical solid-state reactions"
authors = [{ name = "kdavjd", email = "105581554+kdavjd@users.noreply.github.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyqt6>=6.9.0",
    "matplotlib>=3.10.0",
    "pandas>=2.2.0",
    "numpy>=2.2.0",
    "scienceplots>=2.1.1",
    "chardet>=5.2.0",
    "scipy>=1.15.0",
    "pyinstaller>=6.12.0",
    "joblib>=1.4.0",
    "optuna>=4.2.0",
]

[project.scripts]
ssk-gui = "src.gui.__main__:main"

[dependency-groups]
dev = [
    "pre-commit>=3.6.2",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-qt>=4.4.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.15.0",
    "ruff>=0.9.0",
    "black>=25.1.0",
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# === Tool configs ===

[tool.ruff]
target-version = "py313"
line-length = 120

lint.select = [
    "E",  # Ошибки стиля (PEP 8)
    "W",  # Предупреждения (PEP 8)
    "F",  # Ошибки (например, Flake8)
    "C",  # Сложность кода (например, цикломатическая сложность)
    "I",  # Сортировка импортов (isort)
    "Q",  # Quirks (редкие ошибки)
    "A",  # Аннотации типов
    "M",  # Паттерны метрик
]

fix = true

lint.external = ["black"]

exclude = [
    ".git",
    "pycache",
    "build",
    "dist",
    "venv",
    ".venv",
    "docs",
]

lint.extend-select = ["C901"]

[tool.black]
line-length = 120

[tool.mypy]
python_version = "3.13"
cache_dir = "/tmp/pytest-cache"

[tool.pytest.ini_options]
cache_dir = "/tmp/pytest-cache"
addopts = "--verbose --exitfirst --cov=src --cov-report=term-missing --cov-fail-under=0"
testpaths = "tests/"
qt_api = "pyqt6"

log_cli = 1
log_cli_level = "DEBUG"
log_cli_format = "[%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
